--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-374.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-443.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-316.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-320.9KB/s(Youtube:不良林), server: 120.233.29.189, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-321.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-374.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-373.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-337.0KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
   - {name: 🇨🇳 中国-393.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-376.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-301.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-423.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-376.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
