--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-356.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-344.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-337.0KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-474.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-545.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-491.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-236.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-441.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-386.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-316.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-570.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-304.1KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-588.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 捷克-692.3KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 952, type: trojan, password: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, sni: t03.ssrsub.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.4KB/s(Youtube:不良林)
+      - 捷克-692.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
